--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
+    "react-bootstrap-carousel": "^4.1.1",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
